apps/gravity/manifests/etcdctl.yaml
apiVersion: v1
kind: Pod
metadata:
  name: etcdctl
  namespace: gravity
spec:
  securityContext:
    fsGroup: 65534
    runAsUser: 65534
    runAsGroup: 65534
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: etcdctl
      image: sholdee/etcdctl:3.6.0-1
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        capabilities:
          drop: [ "ALL" ]
      volumeMounts:
        - name: data
          mountPath: /var/run/etcd
      resources:
        requests:
          cpu: 10m
          memory: 50Mi
        limits:
          cpu: 200m
          memory: 200Mi
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: data-etcd-0
