apps/gravity/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gravity
  namespace: gravity
  labels:
    app: gravity
spec:
  selector:
    app: gravity
  ports:
    - protocol: UDP
      port: 53
      targetPort: 53
      name: dns
    - protocol: TCP
      port: 53
      targetPort: 53
      name: dns-tcp
  type: LoadBalancer
  loadBalancerIP: 192.168.77.63
  externalTrafficPolicy: Cluster
---
apiVersion: v1
kind: Service
metadata:
  name: gravity-http
  namespace: gravity
  labels:
    app: gravity
    metrics: gravity
spec:
  selector:
    app: gravity
  ports:
    - protocol: TCP
      port: 8008
      targetPort: 8008
      name: http
    - protocol: TCP
      port: 8009
      targetPort: 8009
      name: http-metrics
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: etcd-headless
  namespace: gravity
  labels:
    app: etcd
spec:
  selector:
    app: etcd
  publishNotReadyAddresses: true
  ports:
    - protocol: TCP
      port: 2379
      targetPort: 2379
      name: client
    - protocol: TCP
      port: 2380
      targetPort: 2380
      name: peer
    - protocol: TCP
      port: 2381
      targetPort: 2381
      name: metrics
  type: ClusterIP
  clusterIP: None

---
apiVersion: v1
kind: Service
metadata:
  name: etcd-client
  namespace: gravity
  labels:
    app: etcd
spec:
  selector:
    app: etcd
  ports:
    - protocol: TCP
      port: 2379
      targetPort: 2379
      name: client
  type: ClusterIP
