apps/gravity/manifests/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gravity
  namespace: gravity
  annotations:
    external-dns.alpha.kubernetes.io/target: gateway.mgmt.sholdee.net
spec:
  parentRefs:
  - name: mgmt-gateway
    namespace: default
    sectionName: http
  hostnames:
  - "gravity.mgmt.sholdee.net"
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gravity-https
  namespace: gravity
spec:
  parentRefs:
  - name: mgmt-gateway
    namespace: default
    sectionName: https
  hostnames:
  - "gravity.mgmt.sholdee.net"
  rules:
  - backendRefs:
    - name: gravity-http
      namespace: gravity
      port: 8008
